--- a/package.xml
+++ b/package.xml
@@ -54,6 +54,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
+  <build_depend>kalman</build_depend>
 
   <exec_depend>drive_ros_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
