--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,8 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
  add_executable(${PROJECT_NAME}_node src/imu_odo_odometry.cpp
-                                     src/imu_odo_odometry_node.cpp)
+                                     src/imu_odo_odometry_node.cpp
+                                     src/imu_odo_odometry_debug_file.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
