--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,7 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>kalman</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>rosbag</build_depend>
 
   <exec_depend>drive_ros_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
@@ -63,6 +64,7 @@
   <exec_depend>tf2</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>std_srvs</exec_depend>
+  <exec_depend>rosbag</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
