--- a/package.xml
+++ b/package.xml
@@ -52,6 +52,7 @@
   <build_depend>drive_ros_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>tf</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>kalman</build_depend>
