--- a/config/ftm_rc_car_1.yaml
+++ b/config/ftm_rc_car_1.yaml
@@ -1,4 +1,4 @@
 kalman_cov: {filter_init_var_a: 0.0, filter_init_var_omega: 0.0, filter_init_var_theta: 0.0,
-  filter_init_var_v: 0.0, filter_init_var_x: 0.0, filter_init_var_y: 0.0, sys_var_a: 3.809701985322761e-08,
-  sys_var_omega: 4.1772916345245605e-06, sys_var_theta: 1.160157104912418e-08, sys_var_v: 0.2903481465997816,
-  sys_var_x: 5.3927484707487716e-08, sys_var_y: 8.324539801716098e-09}
+  filter_init_var_v: 0.0, filter_init_var_x: 0.0, filter_init_var_y: 0.0, sys_var_a: 8.567783839852888e-05,
+  sys_var_omega: 8.094225290819645e-06, sys_var_theta: 3.048453694511547e-09, sys_var_v: 2.0649599347351485e-05,
+  sys_var_x: 6.107858343867233e-09, sys_var_y: 4.6982234738510754e-08}
