--- a/config/phoenix_cc2017.yaml
+++ b/config/phoenix_cc2017.yaml
@@ -1,21 +1,4 @@
-kalman_cov:
-
-    # INITIAL COVARIANCES
-    filter_init_var_x: 0.01
-    filter_init_var_y: 0.01
-    filter_init_var_a: 0.01
-    filter_init_var_v: 0.01
-    filter_init_var_theta: 0.01
-    filter_init_var_omega: 0.01
-
-
-    # PROCESS COVARIANCES
-    # Choose std-devs to be about the maximum error in a time-step
-    # See: http://nbviewer.ipython.org/github/balzer82/Kalman/blob/master/Extended-Kalman-Filter-CTRV.ipynb?create=1
-    # More infos: https://github.com/lms-org/config_auto_drive/blob/master/configs/ego.xml
-    sys_var_x: 0.001
-    sys_var_y: 0.001
-    sys_var_a: 0.0024
-    sys_var_v: 0.0004
-    sys_var_theta: 0.008
-    sys_var_omega: 0.03
+kalman_cov: {filter_init_var_a: 0.01, filter_init_var_omega: 0.01, filter_init_var_theta: 0.01,
+  filter_init_var_v: 0.01, filter_init_var_x: 0.01, filter_init_var_y: 0.01, sys_var_a: 0.0008755691316617003,
+  sys_var_omega: 2.9821478601082267e-09, sys_var_theta: 3.914915732851555e-09, sys_var_v: 0.00025844235256071955,
+  sys_var_x: 5.884615191579713e-09, sys_var_y: 3.4174141581060203e-09}
