--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>drive_ros_imu_odo_odometry</name>
+  <name>drive_ros_localize_odom_fusion</name>
   <version>0.0.0</version>
-  <description>The drive_ros_imu_odo_odometry package</description>
+  <description>The drive_ros_localize_odom_fusion package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="fabian@todo.todo">fabianhanke</maintainer>
+  <maintainer email="fabian@todo.todo">fabian</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
